Adapt for rating